refactor: mail structure
