# openapi.json
@@ -51,6 +51,73 @@
                 "deprecated": false
             }
         },
+        "/api/v1/auth/confirm-email": {
+            "get": {
+                "tags": [
+                    "auth"
+                ],
+                "summary": "ConfirmEmail",
+                "operationId": "ApiV1AuthConfirmEmailConfirmEmail",
+                "parameters": [
+                    {
+                        "name": "token",
+                        "in": "query",
+                        "schema": {
+                            "type": "string"
+                        },
+                        "required": true,
+                        "deprecated": false,
+                        "allowEmptyValue": false,
+                        "allowReserved": false
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "Request fulfilled, nothing follows",
+                        "headers": {}
+                    },
+                    "400": {
+                        "description": "Bad request syntax or unsupported method",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status_code": {
+                                            "type": "integer"
+                                        },
+                                        "detail": {
+                                            "type": "string"
+                                        },
+                                        "extra": {
+                                            "additionalProperties": {},
+                                            "type": [
+                                                "null",
+                                                "object",
+                                                "array"
+                                            ]
+                                        }
+                                    },
+                                    "type": "object",
+                                    "required": [
+                                        "detail",
+                                        "status_code"
+                                    ],
+                                    "description": "Validation Exception",
+                                    "examples": [
+                                        {
+                                            "status_code": 400,
+                                            "detail": "Bad Request",
+                                            "extra": {}
+                                        }
+                                    ]
+                                }
+                            }
+                        }
+                    }
+                },
+                "deprecated": false
+            }
+        },
         "/api/v1/auth/profile": {
             "get": {
                 "tags": [
@@ -381,13 +448,13 @@
                 "deprecated": false
             }
         },
-        "/api/v1/auth/resend-verification-mail": {
+        "/api/v1/auth/resend-email-confirmation-mail": {
             "post": {
                 "tags": [
                     "auth"
                 ],
-                "summary": "ResendVerificationMail",
-                "operationId": "ApiV1AuthResendVerificationMailResendVerificationMail",
+                "summary": "ResendEmailConfirmationMail",
+                "operationId": "ApiV1AuthResendEmailConfirmationMailResendEmailConfirmationMail",
                 "responses": {
                     "204": {
                         "description": "Request fulfilled, nothing follows",
@@ -706,73 +773,6 @@
                                 }
                             }
                         }
-                    },
-                    "400": {
-                        "description": "Bad request syntax or unsupported method",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "status_code": {
-                                            "type": "integer"
-                                        },
-                                        "detail": {
-                                            "type": "string"
-                                        },
-                                        "extra": {
-                                            "additionalProperties": {},
-                                            "type": [
-                                                "null",
-                                                "object",
-                                                "array"
-                                            ]
-                                        }
-                                    },
-                                    "type": "object",
-                                    "required": [
-                                        "detail",
-                                        "status_code"
-                                    ],
-                                    "description": "Validation Exception",
-                                    "examples": [
-                                        {
-                                            "status_code": 400,
-                                            "detail": "Bad Request",
-                                            "extra": {}
-                                        }
-                                    ]
-                                }
-                            }
-                        }
-                    }
-                },
-                "deprecated": false
-            }
-        },
-        "/api/v1/auth/verify-email": {
-            "get": {
-                "tags": [
-                    "auth"
-                ],
-                "summary": "VerifyEmail",
-                "operationId": "ApiV1AuthVerifyEmailVerifyEmail",
-                "parameters": [
-                    {
-                        "name": "verification_token",
-                        "in": "query",
-                        "schema": {
-                            "type": "string"
-                        },
-                        "required": true,
-                        "deprecated": false,
-                        "allowEmptyValue": false,
-                        "allowReserved": false
-                    }
-                ],
-                "responses": {
-                    "204": {
-                        "description": "Request fulfilled, nothing follows",
-                        "headers": {}
                     },
                     "400": {
                         "description": "Bad request syntax or unsupported method",
@@ -1464,7 +1464,7 @@
                             "example@gmail.com"
                         ]
                     },
-                    "verified": {
+                    "email_confirmed": {
                         "type": "boolean"
                     },
                     "registered_at": {
@@ -1475,10 +1475,10 @@
                 "type": "object",
                 "required": [
                     "email",
+                    "email_confirmed",
                     "registered_at",
                     "user_id",
-                    "username",
-                    "verified"
+                    "username"
                 ],
                 "title": "Profile"
             },
