# src/mail/dto/dto.py
@@ -1,19 +1,19 @@
 from dataclasses import dataclass
 
-from .base import BaseMailDTO
+from .base_dto import BaseMailDTO
 
 
 @dataclass(slots=True, frozen=True)
-class VerificationMailDTO(BaseMailDTO):
-    verification_token: str
+class EmailConfirmationMailDTO(BaseMailDTO):
+    token: str
 
 
 @dataclass(slots=True, frozen=True)
-class InfoMailDTO(BaseMailDTO):
+class NewLoginMailDTO(BaseMailDTO):
     user_ip: str
     browser: str
 
 
 @dataclass(slots=True, frozen=True)
-class ResetMailDTO(BaseMailDTO):
+class PasswordResetMailDTO(BaseMailDTO):
     code: str
